src/test/deca/context/valid/method-fieldSameNameVar.deca
class A{
	int a;
	void met() {
		boolean a;
	}
}
