src/test/deca/context/invalid/return-invalidTypeVoid.deca
class A {
    void coco(A a) {
        return a;
    }
}